# winresource

./: .gitignore  Cargo.toml  README.md  lib.rs
.github/workflows/: ci.yml  xwin.Dockerfile
example/: Cargo.toml  build.rs
example/src/: main.rs
example_dynlib/double_driver/: Cargo.toml  build.rs
example_dynlib/double_main/: Cargo.toml  build.rs
example_dynlib/double_main/src/: main.rs
multi_binary_example/: Cargo.toml  build.rs
