[package]
name = "winresource"
description = "Create and set windows icons and metadata for executables"
version = "0.1.11"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/BenjaminRi/winresource"
documentation= "https://docs.rs/winresource/*/winresource/"

[lib]
path = "lib.rs"

[dependencies]
toml = "0.5"

[dev-dependencies]
# used for tests
winapi = { version = "0.3", features = [ "winnt" ] }
