[package]
name = "winresource-example"
description = "Example for winresource"
version = "0.1.4"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/BenjaminRi/winresource"
documentation = "https://docs.rs/winresource/*/winresource/"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2016-2024"
# This FileDescription overrides package.description:
FileDescription = "Example for \"winresource\" (override)"

[build-dependencies]
winresource = { path = ".." }
