[package]
edition = "2021"
name = "winresource-example"
description = "Example for winresource"
version = "0.1.4"
authors = ["Max Resch <resch.max@gmail.com>"]
license = "MIT"
repository = "https://github.com/BenjaminRi/winresource"
documentation = "https://docs.rs/winresource/*/winresource/"
build = "build.rs"

[package.metadata.winresource]
# Because Windows uses `FileDescription` as the application name in
# various places like the Task Manager and error dialogs, it is highly
# recommended to override `FileDescription` and set it to a short,
# usually title cased application name.
# By default, the `FileDescription` is set to the package name.
FileDescription = "Winresource Example"
LegalCopyright = "Copyright 2016-2024"

[build-dependencies]
winresource = { path = ".." }
